# chess_pattern_SDL

./: CMakeLists.txt  README.md  chessboard.cpp  chessboard.h  chessboard_renderer.h  chessboard_renderer_sdl.cpp  chessboard_renderer_sdl.h  main.cpp
